objects/Cancellation_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_IMS__c</fullName>
        <formula>Account_Name__r.IMS_Rep__c</formula>
        <label>Account IMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Level_IMS_ID__c</fullName>
        <formula>Account_Name__r.IMS_Rep__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Level IMS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cancellation Requests</relationshipLabel>
        <relationshipName>Cancellation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Product_Type__c</fullName>
        <formula>Account_Name__r.Product_Type_Transactional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_in_Save_Mode__c</fullName>
        <label>Product in Cancel Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Web Only</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>Ads</fullName>
                </value>
                <value>
                    <fullName>Leads By Web</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>TORCHx</fullName>
                </value>
                <value>
                    <fullName>Ads &amp; Organic Only</fullName>
                </value>
                <value>
                    <fullName>Already Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>Please only use for final notes regarding cancellation outcome or notes regarding duplicate retention cases. All other notes should be put in comment section below</inlineHelpText>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adoption_Call_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adoption Call Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adstation_Credit2__c</fullName>
        <label>Adstation Credit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adstation_Credit_Detail__c</fullName>
        <label>Adstation Credit Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adstation_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adstation Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Call_Work_Complete__c</fullName>
        <label>After Call Work Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Confirmation__c</fullName>
        <inlineHelpText>Initial to verify that you have completed after call work, verified changes/status in YL, sent confirmation to client</inlineHelpText>
        <label>Agent Confirmation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_By__c</fullName>
        <description>Stores the name of the person needed to approve the record.</description>
        <label>Approval By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempts_to_Contact__c</fullName>
        <label>Attempts to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Close_Date__c</fullName>
        <description>Date of cancellation auto close for LBW/POD accounts.</description>
        <label>Auto Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billable_Month__c</fullName>
        <formula>CASE(MONTH(Next_Bill_Date__c), 1, "January", 2, "February", 3, "March", 4, "April", 5, "May", 6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "None") &amp; " " &amp; TEXT(YEAR(Next_Bill_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Answering2__c</fullName>
        <label>Call Answering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Answering_Detail__c</fullName>
        <label>Call Answering Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Answering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Answering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Code__c</fullName>
        <description>5/2</description>
        <label>First Cancel Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA-CONFLICTING_PAID_SEARCH_CAMPAIGN</fullName>
                </value>
                <value>
                    <fullName>AA-NO_ECONTRACT</fullName>
                </value>
                <value>
                    <fullName>AA-NO_PHYSICAL_ADDRESS</fullName>
                </value>
                <value>
                    <fullName>AA-NO_PSG_SELECTED/IRRELEVANT</fullName>
                </value>
                <value>
                    <fullName>AA-OTHER</fullName>
                </value>
                <value>
                    <fullName>AA-PHYSICAL_ADDRESS_TOO_FAR_AWAY</fullName>
                </value>
                <value>
                    <fullName>AA-POPULATION_TOO_SMALL</fullName>
                </value>
                <value>
                    <fullName>CI-CUTTING_ADVERTISING_BUDGET</fullName>
                </value>
                <value>
                    <fullName>CI-LIVE_UNDER_DIFFERENT_ACCOUNT_ID</fullName>
                </value>
                <value>
                    <fullName>CI-LOST_TO_COMPETITOR</fullName>
                </value>
                <value>
                    <fullName>CI-OUT_OF_BUSINESS</fullName>
                </value>
                <value>
                    <fullName>CI-SEASONAL_BUSINESS</fullName>
                </value>
                <value>
                    <fullName>CI-UNAUTHORIZED_PURCHASE</fullName>
                </value>
                <value>
                    <fullName>CI-UNRESPONSIVE/NO_CONTRACT</fullName>
                </value>
                <value>
                    <fullName>F-CONTACTS FEATURE IS LIMITED</fullName>
                </value>
                <value>
                    <fullName>F-DISLIKES_WEBSITE</fullName>
                </value>
                <value>
                    <fullName>F-EMAIL FEATURE IS LIMITED</fullName>
                </value>
                <value>
                    <fullName>F-EMAIL FEATURE NOT WORKING</fullName>
                </value>
                <value>
                    <fullName>F-ESSENTIALS TOO MUCH WORK</fullName>
                </value>
                <value>
                    <fullName>F-OFFERS FEATURE IS LIMITED</fullName>
                </value>
                <value>
                    <fullName>F-PHOTOS FEATURE IS LIMITED</fullName>
                </value>
                <value>
                    <fullName>F-REVIEWS FEATURE IS LIMITED</fullName>
                </value>
                <value>
                    <fullName>F-SOCIAL FEATURE IS LIMITED</fullName>
                </value>
                <value>
                    <fullName>LT-CUSTOMER_SERVICE_ISSUE</fullName>
                </value>
                <value>
                    <fullName>LT-GENERAL_SETUP_ERRORS</fullName>
                </value>
                <value>
                    <fullName>LT-NEGATIVE_REVIEWS</fullName>
                </value>
                <value>
                    <fullName>LT-TECHNICAL_ISSUES</fullName>
                </value>
                <value>
                    <fullName>P-POOR_LEAD_QUALITY</fullName>
                </value>
                <value>
                    <fullName>P-POOR_LEAD_VOLUME</fullName>
                </value>
                <value>
                    <fullName>P-POOR_RANKING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Outcome_Sub_Status__c</fullName>
        <label>Cancel Outcome Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WBN Controlled Churn</fullName>
                </value>
                <value>
                    <fullName>Non-WBN Controlled Churn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Code_Details__c</fullName>
        <label>Cancellation Code Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Sync</fullName>
                </value>
                <value>
                    <fullName>Ability to Customize</fullName>
                </value>
                <value>
                    <fullName>Acquisition - Leaving for Competitor</fullName>
                </value>
                <value>
                    <fullName>Acquisition - Poor Performance</fullName>
                </value>
                <value>
                    <fullName>Already Messaging with Another Service</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Auto-Confirm Issues</fullName>
                </value>
                <value>
                    <fullName>Better Confirmation Support</fullName>
                </value>
                <value>
                    <fullName>Better Customer Service</fullName>
                </value>
                <value>
                    <fullName>Better Product</fullName>
                </value>
                <value>
                    <fullName>Better Review Solicitation</fullName>
                </value>
                <value>
                    <fullName>Billing Decline Termination</fullName>
                </value>
                <value>
                    <fullName>Bolt On - Lube Sticker Issues</fullName>
                </value>
                <value>
                    <fullName>Bolt On - Message Manager Pro Issues</fullName>
                </value>
                <value>
                    <fullName>Bolt On - Mobile manager Issues</fullName>
                </value>
                <value>
                    <fullName>Bolt On - ProPack Printer issues</fullName>
                </value>
                <value>
                    <fullName>Bolt On - Report Pro Issues</fullName>
                </value>
                <value>
                    <fullName>Bolt On - Welcome Station Issues</fullName>
                </value>
                <value>
                    <fullName>Broker Approval Required</fullName>
                </value>
                <value>
                    <fullName>Business Too Small To See Value</fullName>
                </value>
                <value>
                    <fullName>Buyer's Remorse</fullName>
                </value>
                <value>
                    <fullName>Calendar/Schedule Issues</fullName>
                </value>
                <value>
                    <fullName>Client Did Not Provide Info</fullName>
                </value>
                <value>
                    <fullName>Closing Practice / Shop</fullName>
                </value>
                <value>
                    <fullName>Conflicting Paid Search Campaign</fullName>
                </value>
                <value>
                    <fullName>Consolidating Accounts</fullName>
                </value>
                <value>
                    <fullName>Consolidating Vendors</fullName>
                </value>
                <value>
                    <fullName>Consumables Pricing</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Contract Length Discrepancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <description>LH &amp; TORCHx Codes</description>
        <label>Cancellation Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Acceptance</fullName>
                </value>
                <value>
                    <fullName>Bolt On Issues</fullName>
                </value>
                <value>
                    <fullName>Buyer's Remorse</fullName>
                </value>
                <value>
                    <fullName>Charge Failure</fullName>
                </value>
                <value>
                    <fullName>Downsell Request</fullName>
                </value>
                <value>
                    <fullName>Features</fullName>
                </value>
                <value>
                    <fullName>Internal System Use</fullName>
                </value>
                <value>
                    <fullName>Leadership Changes</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Error</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No ROI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service Concerns</fullName>
                </value>
                <value>
                    <fullName>Software Too Complicated</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact</fullName>
                </value>
                <value>
                    <fullName>Unhappy with Website</fullName>
                </value>
                <value>
                    <fullName>Unresponsive Client: Website Info</fullName>
                </value>
                <value>
                    <fullName>Upsell Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date_Entered__c</fullName>
        <label>Cancellation Date Entered</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>IF(Closed_Date__c &lt;&gt; NULL, Closed_Date__c - Date_of_Cancellation_Request__c, TODAY() - Date_of_Cancellation_Request__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cancellation Requests</relationshipLabel>
        <relationshipName>Cancellation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Email_from_Account__c</fullName>
        <label>Client Email from Account</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Tenure__c</fullName>
        <label>Client Tenure</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Backed Out Sale</fullName>
                </value>
                <value>
                    <fullName>&lt;30 Days</fullName>
                </value>
                <value>
                    <fullName>1 to 3 Months</fullName>
                </value>
                <value>
                    <fullName>4 to 6 Months</fullName>
                </value>
                <value>
                    <fullName>7 Mths to 1 Year</fullName>
                </value>
                <value>
                    <fullName>1+ Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_s_Phone__c</fullName>
        <label>Client's Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concession_Details__c</fullName>
        <label>Concession Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <formula>Account_Name__r.Contract_Length__c</formula>
        <label>Contract Length</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Monthly_Revenue__c</fullName>
        <label>Current Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Cancellation_Request__c</fullName>
        <label>Date of Cancellation Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Stop_Service_Date__c</fullName>
        <label>Date to Stop Service (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Of_Next_SLA_Touch__c</fullName>
        <label>Day Of Next SLA Touch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_SLA_Equivalent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Day SLA Equivalent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Live_at__c</fullName>
        <label>Days Live at Save/Cancel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Sale__c</fullName>
        <formula>TODAY() - Account_Name__r.Order_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This calculates the number of days since the account was sold.</inlineHelpText>
        <label>Days Since Sale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>LH Cancellation</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Next_Contact__c</fullName>
        <label>Details of Next Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Director_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Director Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Notes_to_Client__c</fullName>
        <label>Email Notes to Client</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_to_Client__c</fullName>
        <label>Email to Client</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Escalation_Potential__c</fullName>
        <inlineHelpText>If Yes, this will send an email to your manager letting them know.</inlineHelpText>
        <label>Escalation Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Essentials_Upgrade2__c</fullName>
        <label>Essentials Upgrade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Essentials_Upgrade_Detail__c</fullName>
        <label>Essentials Upgrade Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Essentials_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Essentials Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_Post_For_You__c</fullName>
        <label>Facebook Post-For-You</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Cancel_Code_Details__c</fullName>
        <label>First Cancel Code Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Cancel_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ability to Customize</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Better Customer Service</fullName>
                </value>
                <value>
                    <fullName>Better Features</fullName>
                </value>
                <value>
                    <fullName>Better Product</fullName>
                </value>
                <value>
                    <fullName>Better ROI</fullName>
                </value>
                <value>
                    <fullName>Better Website</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Broker Approval Required</fullName>
                </value>
                <value>
                    <fullName>Buyer's Remorse</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Can't Afford Budget</fullName>
                </value>
                <value>
                    <fullName>Centermark</fullName>
                </value>
                <value>
                    <fullName>Cheaper Competitor</fullName>
                </value>
                <value>
                    <fullName>Closing Business</fullName>
                </value>
                <value>
                    <fullName>Colors</fullName>
                </value>
                <value>
                    <fullName>Compared to Competitor</fullName>
                </value>
                <value>
                    <fullName>Conflicting Paid Search Campaign</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Contacts Feature</fullName>
                </value>
                <value>
                    <fullName>Contract Length Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Controlling Party</fullName>
                </value>
                <value>
                    <fullName>Corporate Billing Decline</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>CRM Too Much Work</fullName>
                </value>
                <value>
                    <fullName>Customizations</fullName>
                </value>
                <value>
                    <fullName>Custom Landing Pages</fullName>
                </value>
                <value>
                    <fullName>Cutting Budget Overall</fullName>
                </value>
                <value>
                    <fullName>Data Feed Issue</fullName>
                </value>
                <value>
                    <fullName>Denied Ts &amp; Cs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Cancel_Code_Notes__c</fullName>
        <label>First Cancel Code Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Free_Time2__c</fullName>
        <label>Free Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Free_Time_Details__c</fullName>
        <label>Free Time Details</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Monthly_Revenue__c</fullName>
        <label>Future Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Got_client_into_dashboard__c</fullName>
        <label>Got client into dashboard?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes reviewed dashboard</fullName>
                </value>
                <value>
                    <fullName>No would not login</fullName>
                </value>
                <value>
                    <fullName>Did not attempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hit_Lead_Range__c</fullName>
        <label>Hit Lead Range?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Product__c</fullName>
        <label>Initial Product</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Last_Month__c</fullName>
        <formula>IF( Account_Name__r.invoiced_last_mtd__c &gt;399.00,"1","2")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inv Last Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Last_Month__c</fullName>
        <formula>Account_Name__r.invoiced_last_mtd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Last MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>